static/psi4manual/1.3.2/_sources/api/psi4.core.OEProp.rst.txt
OEProp
======

.. currentmodule:: psi4.core

.. autoclass:: OEProp
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~OEProp.valid_methods

   .. rubric:: Methods Summary

   .. autosummary::

      ~OEProp.Exvals
      ~OEProp.Eyvals
      ~OEProp.Ezvals
      ~OEProp.Vvals
      ~OEProp.add
      ~OEProp.clear
      ~OEProp.compute
      ~OEProp.set_Da_ao
      ~OEProp.set_Da_mo
      ~OEProp.set_Da_so
      ~OEProp.set_Db_ao
      ~OEProp.set_Db_mo
      ~OEProp.set_Db_so

   .. rubric:: Attributes Documentation

   .. autoattribute:: valid_methods

   .. rubric:: Methods Documentation

   .. automethod:: Exvals
   .. automethod:: Eyvals
   .. automethod:: Ezvals
   .. automethod:: Vvals
   .. automethod:: add
   .. automethod:: clear
   .. automethod:: compute
   .. automethod:: set_Da_ao
   .. automethod:: set_Da_mo
   .. automethod:: set_Da_so
   .. automethod:: set_Db_ao
   .. automethod:: set_Db_mo
   .. automethod:: set_Db_so
